mutation observer added

--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,9 @@
             </div>
         </div>
 
+        <div id="id1">-</div>
+
+
         <script src="popup.js"></script>
     </body>
 </html>
