--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,29 @@
 <html>
     <head>
-        <link rel="stylesheet" href="button.css">
+        <link rel="stylesheet" href="popup.css">
     </head>
     <body>
-        <div class="container">
+        <main class="container">
+            <!-- <button id="colorChange"></button> -->
+
+            <section class="row">
+                <!-- <h2>CORE</h2> / <h2>ETH</h2> -->
+                <span class="coin">CORE</span>
+                <span class="coin">/</span>
+                <span class="coin">ETH</span>
+            </section>
+            <section class="row">
+                <h1>5.4616</h1>
+            </section>
+            <section class="row">
+                <span>Price Above</span>
+                <input type="number" />
+                <span>Price Below</span>
+                <input type="number"/>
+
+            </section>
+        </main>
+        <!-- <div class="container">
             <button id="colorChange"></button>
             <div id="buttonDiv"></div>
             <div>
@@ -11,7 +31,7 @@
             </div>
         </div>
 
-        <div id="id1">-</div>
+        <div id="id1">-</div> -->
 
 
         <script src="popup.js"></script>
